# advent-of-code

./: .gitignore  .pre-commit-config.yaml  .rtx.toml  README.md  baseline.txt  go.mod  pyproject.toml  requirements.txt
2019/: day01-fuel.xlsx  day02_intcode.py  day03-path.py  day04-password.py  day04_password.py  day05-intcode.py  day05_intcode.py  day06-orbits.py  day06_orbits.py  day07-intcode.py  day07_intcode.py  day08-image.py  day08_image.py  day09-intcode.py  day09_intcode.py  day10-asteroids.py  day10_asteroids.py
2019/inputs/: day06-ex1
2020/: day01-expense.py  day01_expense.py  day02-passwords.py  day02_passwords.py  day03_toboggan.py  day04_passport.py  day05-boarding-pass.py  day06-customs-declaration.py  day07_bags.py  day08-console.py  day09-xmas.py  day09_xmas.py  day10-adapter-array.py  day10_adapter_array.py  day11_seating.py  day12_navigation.py  day13_bus.py  day14_docking.py  day15_memory.py  day16_ticket_translation.py  day17_conway_cubes.py  new_day  template.py  test_day10_part2.py  test_day11_game.py  test_day14_masked_addresses.py
2020/inputs/: day05-test1  day06-test2  day12-test2
2021/: day01.js  day02.ods  day03_gamma.py  day04_bingo.py  day05_vents.py  day06_lanternfish.py  day07_crabs.py  template.py
2021/inputs/: day05-test2
2022/: day01_calories.py  day02_rock_paper_scissors.py  day03_rucksack.py  day04_camp_cleanup.py  day05_supply_stacks.py  day06_signal.py  day07_space.py  day08_trees.py  day09_bridge.py  day10_cathode.py  day11_monkeys.py  day12_hill.py  day13_distress.py  day14_sand.py  day15_beacons.py  new_day  template.py
2023/: day01_trebuchet.go  day01_trebuchet_test.go  day02_cubes_game.go  day02_cubes_game_test.go  day03_engine.go  day03_engine_test.go  day04_scratchcards.go  day04_scratchcards_test.go  day05_almanac.go  day05_almanac_test.go  day06_boats.go  day06_boats_test.go  day07_camel_cards.go  day07_camel_cards_test.go  day08_left_right.go  day08_left_right_test.go  day09_series.go  day09_series_test.go  lib.go  lib_test.go  new_day  template.go  template_test.go  types.go
(+3 files in other folders)
