[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Gabriel Augendre <gabriel@augendre.info>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
networkx = ">=2.5"
pdbpp = ">=0.10.2"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.9.2"
pytest = ">=6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


###############################################################################
# flake8 / flakeheaven
###############################################################################
[tool.flakeheaven]
max_complexity = 10
format = "grouped"
baseline = "baseline.txt"

# Base rules
#############################
[tool.flakeheaven.plugins]
"*" = [
    "+*",
    "-E501", # long lines
    "-E203", # conflict with black on PEP8 interpretation
    "-W503",  # deprecated rule: https://www.flake8rules.com/rules/W503.html
]
flake8-builtins = [
    "+*",
    "-A003", # class attribute is shadowing a python builtin
]
flake8-bandit = [
    "+*",
    "-S101", # Use of assert detected.
]
